data/derived/fa15/progs/unify/prog3485.ml.out
Characters 39-40:
  if xs == [] then 0;;
                   ^
Error: This expression has type int but an expression was expected of type
         unit
